package com.gykj.autoupdate.utils;

public interface GetUrlListener {
    void success(String url);
    void failure();
}
