@startuml

title __UTILS's Class Diagram__\n

  namespace com.gykj.autoupdate {
    namespace utils {
      class com.gykj.autoupdate.utils.DensityUtil {
          {static} + dip2px()
          {static} + px2dip()
      }
    }
  }
  

  namespace com.gykj.autoupdate {
    namespace utils {
      class com.gykj.autoupdate.utils.DeviceIdTool {
          {static} - DEVICEID_FILE : String
          {static} - mSopHixFileName : String
          {static} - mSopHixTextPath : String
          {static} + getDeviceId()
          {static} + getSopHixNumber()
          {static} + toImproveSopHixNum()
      }
    }
  }
  

  namespace com.gykj.autoupdate {
    namespace utils {
      class com.gykj.autoupdate.utils.FileUtil {
          {static} + getDownloadDirectory()
          {static} + getFileName()
      }
    }
  }
  

  namespace com.gykj.autoupdate {
    namespace utils {
      interface com.gykj.autoupdate.utils.GetUrlListener {
          {abstract} + failure()
          {abstract} + success()
      }
    }
  }
  

  namespace com.gykj.autoupdate {
    namespace utils {
      class com.gykj.autoupdate.utils.InstallUtil {
          {static} + UNKNOWN_CODE : int
          - mAct : Context
          - mPath : String
          + InstallUtil()
          {static} + getAppProcessName()
          + install()
          - getAuthority()
          - startInstall()
          - startInstallN()
          - startInstallO()
      }
    }
  }
  

  namespace com.gykj.autoupdate {
    namespace utils {
      class com.gykj.autoupdate.utils.PermisionUtils {
          {static} - PERMISSIONS_STORAGE : String[]
          {static} - REQUEST_EXTERNAL_STORAGE : int
          {static} + verifyStoragePermissions()
      }
    }
  }
  

  namespace com.gykj.autoupdate {
    namespace utils {
      class com.gykj.autoupdate.utils.ScreenUtil {
          {static} + getHeight()
          {static} + getWith()
      }
    }
  }
  

  namespace com.gykj.autoupdate {
    namespace utils {
      class com.gykj.autoupdate.utils.UpdateAppUtil {
          {static} + mOutsideAuthority : String
          - accessKeyId : String
          - bucketName : String
          - dialogButtonColor : int
          - dialogButtonTextColor : int
          - dialogImg : int
          - endPoint : String
          {static} - instance : UpdateAppUtil
          - key : String
          {static} - mContext : Context
          - token : String
          + checkVersion()
          + checkVersion()
          + checkVersionMsg()
          + checkVersionMsg()
          + finish()
          {static} + getInstance()
          {static} + getInstance()
          + setCustomUpdateDialog()
          + updateOhterAPK()
          - UpdateAppUtil()
          - downloadApk()
          - downloadApkNoDialog()
          - initDowload()
          - initUpCenter()
      }
    }
  }
  

  namespace com.gykj.autoupdate {
    namespace utils {
      interface com.gykj.autoupdate.utils.UpdateAppUtil.CheckVersionCallBack {
          {abstract} + onCheckVersionCallBack()
      }
    }
  }
  

  namespace com.gykj.autoupdate {
    namespace utils {
      interface com.gykj.autoupdate.utils.UpdateAppUtil.hotFixCallBack {
          {abstract} + onHotFixVetrsionCallBack()
      }
    }
  }
  

  com.gykj.autoupdate.utils.UpdateAppUtil o-- com.gykj.autoupdate.bean.SysVersion : sysVersion
  com.gykj.autoupdate.utils.UpdateAppUtil o-- com.gykj.autoupdate.oss.UpCenter : upCenter
  com.gykj.autoupdate.utils.UpdateAppUtil +-down- com.gykj.autoupdate.utils.UpdateAppUtil.CheckVersionCallBack
  com.gykj.autoupdate.utils.UpdateAppUtil +-down- com.gykj.autoupdate.utils.UpdateAppUtil.hotFixCallBack


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
